# AndroidBase

./: settings.gradle
androidbase/: build.gradle
androidbase/src/main/: AndroidManifest.xml
androidbase/src/main/java/com/verifone/androidbase/: BootBroadcastReceiver.java  (+2 more)
androidbase/src/main/res/layout/: activity_expand_listview.xml  activity_listview.xml  activity_ui.xml  array_adapter_list_item.xml  custom_view.xml  expand_list_child.xml  fragment_listview_arrayadapter.xml
androidbase/src/main/res/values/: colors.xml  strings.xml  styles.xml
androidbase2/: build.gradle
androidbase2/src/main/: AndroidManifest.xml
androidbase2/src/main/res/layout/: activity_main.xml
androidbase2/src/main/res/values/: strings.xml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/drawable/: common_list_item_bg.xml
app/src/main/res/layout/: activity_camera2.xml  activity_launch_single_task.xml  activity_launch_standard_mode.xml  activity_launch_ui.xml  activity_listview.xml  activity_main.xml  activity_slide_list.xml  activity_ui.xml  base_adapter_list_item.xml  expand_list_group.xml  fragment_listview_baseadapter.xml  fragment_listview_simpleadapter.xml  right_fragment_listview_arrayadapter.xml  simple_adapter_list_item.xml  slide_list_item.xml
app/src/main/res/values/: colors.xml
gradle/wrapper/: gradle-wrapper.properties
jnitest/: CMakeLists.txt  build.gradle
jnitest/src/androidTest/java/com/verifone/kail1/jnitest/: ExampleInstrumentedTest.java
jnitest/src/main/: AndroidManifest.xml
jnitest/src/main/cpp/: debug.h  native-lib.cpp
jnitest/src/main/java/com/verifone/kail1/jnitest/: MainActivity.java
jnitest/src/main/res/layout/: activity_main.xml
jnitest/src/test/java/com/verifone/kail1/jnitest/: ExampleUnitTest.java
(+36 files in other folders)
